--- a/pragmatic/accountapp/templates/accountapp/hello_world.html
+++ b/pragmatic/accountapp/templates/accountapp/hello_world.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div style="border-radius: 1rem; margin: 2rem; text-align: center">
+    <div style="border-radius: 1rem; margin: 2rem; text-align: center;">
         <h1 style="font-family: 'lobster', cursive;">
             Hello World List!
         </h1>
