--- a/pragmatic/accountapp/templates/accountapp/detail.html
+++ b/pragmatic/accountapp/templates/accountapp/detail.html
@@ -3,13 +3,19 @@
 
     <div>
         <div style="text-align: center; max-width: 500px; margin: 4rem auto;">
-            <p>
-                {{ target_user.date_joined }}
-            </p>
+<!--            <p>-->
+<!--                {{ target_user.date_joined }}-->
+<!--            </p>-->
+
+            <img src="{{ target_user.profile.image.url }}" alt=""
+                 style="height: 12rem; width 12rem; border-radius: 20rem; margin-bottom: 2rem;">
 
             {% if target_user.profile %}
             <h2 style="font-family: 'NanumSquareB'">
                 {{ target_user.profile.nickname }}
+                <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+                    edit
+                </a>
             </h2>
             {% else %}
             <a href="{% url 'profileapp:create' %}">
@@ -18,6 +24,10 @@
                 </h2>
             </a>
             {% endif %}
+
+            <h5 style="margin-bottom: 3rem;">
+                {{ target_user.profile.message }}
+            </h5>
 
             {% if target_user == user %}
             <a href="{% url 'accountapp:update' pk=user.pk %}">
