--- a/pragmatic/articleapp/templates/articleapp/list.html
+++ b/pragmatic/articleapp/templates/articleapp/list.html
@@ -4,9 +4,20 @@
 {% block content %}
 
     <style>
+
+        .container {
+            padding: 0;
+            margin: 0, auto;
+        }
+
+        .container a {
+            width: 45%;
+            max-width: 250px;
+        }
+
         .container div {
           width: 250px;
-          background-color: antiquewhite;
+
           display: flex;
           justify-content: center;
           align-items: center;
@@ -75,7 +86,7 @@
     {% include 'snippets/pagination.html' with page_obj=page_obj %}
 
     <div style="text-align: center;">
-        <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+        <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill mt-3 mb-3 px-3">
             Create Article
         </a>
     </div>
