--- a/pragmatic/templates/head.html
+++ b/pragmatic/templates/head.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>pragmatic</title>
 
     <!--  BOOTSTRAP LINK  -->
@@ -14,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
     <!--  DEFAULT CSS LINK    -->
-    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}?ver=2">
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}?ver=3">
 
     <style>
         @font-face {
