django course 40 commit

--- a/pragmatic/static/base.css
+++ b/pragmatic/static/base.css
@@ -21,3 +21,20 @@
         font-size: 13px;
     }
 }
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+.pragmatic_header_nav {
+    margin: 0 0.5rem;
+}
+
+.pragmatic_header_navbar {
+    margin: 2rem 0;
+}
