--- a/pragmatic/articleapp/templates/articleapp/detail.html
+++ b/pragmatic/articleapp/templates/articleapp/detail.html
@@ -12,7 +12,7 @@
             </h5>
             <hr>
 
-            <img style="width: 100%; border-radius: 1rem; margin: 2rem 0;"
+            <img style="width: 100%; border-radius: 1rem; margin: 2rem 0; object-fit: cover;"
                     src="{{ target_article.image.url }}" alt="">
 
             <p>
