django course 41 commit

--- a/pragmatic/projectapp/templates/projectapp/detail.html
+++ b/pragmatic/projectapp/templates/projectapp/detail.html
@@ -13,6 +13,12 @@
                 {{ target_project.description }}
             </h5>
         </div>
+
+        <div>
+
+            {% include 'snippets/list_fragment.html' with article_list=object_list %}
+
+        </div>
     </div>
 
 {% endblock %}
