--- a/pragmatic/accountapp/templates/accountapp/detail.html
+++ b/pragmatic/accountapp/templates/accountapp/detail.html
@@ -49,6 +49,12 @@
             {% endif %}
 
         </div>
+
+        <div>
+
+            {% include 'snippets/list_fragment.html' with article_list=object_list %}
+
+        </div>
     </div>
 
 {% endblock %}
