--- a/pragmatic/projectapp/templates/projectapp/detail.html
+++ b/pragmatic/projectapp/templates/projectapp/detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <div>
-        <div style="text-align: center; max-width: 500px; margin: 4rem auto; object-fit: cover;">
+        <div style="text-align: center; max-width: 500px; margin: 4rem auto 1.5rem auto">
 
             <img src="{{ target_project.image.url }}" alt=""
                  style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem; object-fit: cover;">
@@ -14,10 +14,24 @@
             </h5>
         </div>
 
+        <div class="text-center mb-5">
+            {% if user.is_authenticated %}
+                {% if not subscription %}
+                <a href="{% url 'subscribeapp:subscribe' %}?project_pk={{ target_project.pk }}"
+                    class="btn btn-primary rounded-pill px-4">
+                    Subscribe
+                </a>
+                {% else %}
+                <a href="{% url 'subscribeapp:subscribe' %}?project_pk={{ target_project.pk }}"
+                    class="btn btn-dark rounded-pill px-4">
+                    UnSubscribe
+                </a>
+                {% endif %}
+            {% endif %}
+        </div>
+
         <div>
-
             {% include 'snippets/list_fragment.html' with article_list=object_list %}
-
         </div>
     </div>
 
