django course 43 commit

--- a/pragmatic/templates/header.html
+++ b/pragmatic/templates/header.html
@@ -10,6 +10,10 @@
         <a href="{% url 'projectapp:list' %}" class="pragmatic_header_nav">
             <span>Project</span>
         </a>
+
+        <a href="{% url 'subscribeapp:list' %}" class="pragmatic_header_nav">
+            <span>Subscription</span>
+        </a>
         {% if not user.is_authenticated %}
         <a href="{% url 'accountapp:login' %}?next={{ request.path }}" class="pragmatic_header_nav">
             <span>login</span>
