django course 44 commit

--- a/pragmatic/articleapp/templates/articleapp/detail.html
+++ b/pragmatic/articleapp/templates/articleapp/detail.html
@@ -12,12 +12,12 @@
             </h5>
             <hr>
 
-            <img style="width: 100%; border-radius: 1rem; margin: 2rem 0; object-fit: cover;"
+            <img style="width: 100%; border-radius: 1rem; margin: 2rem 0;"
                     src="{{ target_article.image.url }}" alt="">
 
-            <p>
-                {{ target_article.content }}
-            </p>
+            <div style="text-align: left">
+                {{ target_article.content | safe }}
+            </div>
 
             {% if target_article.writer == user %}
             <a href="{% url 'articleapp:update' pk=target_article.pk %}"
