--- a/pragmatic/articleapp/templates/articleapp/create.html
+++ b/pragmatic/articleapp/templates/articleapp/create.html
@@ -2,6 +2,9 @@
 {% load bootstrap4 %}
 
 {% block content %}
+<script src="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/js/medium-editor.min.js"></script>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+
 
     <div style="text-align: center; max-width: 500px; margin: 4rem auto;">
         <div class=""mb-4">
@@ -9,10 +12,11 @@
         </div>
         <form action="{% url 'articleapp:create' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-<!--            {{ form }}-->
             {% bootstrap_form form %}
             <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
         </form>
     </div>
+
+<script>var editor = new MediumEditor('.editable');</script>
 
 {% endblock %}
