--- a/pragmatic/templates/head.html
+++ b/pragmatic/templates/head.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
+    <!--  GOOGLE MATERIAL ICONS  -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+
     <!--  DEFAULT CSS LINK    -->
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}?ver=3">
 
