--- a/pragmatic/static/base.css
+++ b/pragmatic/static/base.css
@@ -24,11 +24,12 @@
 
 a {
     color: black;
+    text-decoration: none;
 }
 
 a:hover {
     color: black;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 .pragmatic_header_nav {
