CHG: about bootstrap ver, etc

--- a/pragmatic/articleapp/templates/articleapp/detail.html
+++ b/pragmatic/articleapp/templates/articleapp/detail.html
@@ -15,7 +15,7 @@
             <img style="width: 100%; border-radius: 1rem; margin: 2rem 0;"
                     src="{{ target_article.image.url }}" alt="">
 
-            <div style="text-align: left">
+            <div class="text-left">
                 {{ target_article.content | safe }}
             </div>
 
