--- a/pragmatic/templates/base.html
+++ b/pragmatic/templates/base.html
@@ -3,7 +3,7 @@
 
 {% include 'head.html' %}
 
-<body style="font-family: 'NanumSquareR'; text-decoration: none">
+<body style="font-family: 'NanumSquareR';">
     {% include 'header.html' %}
 
     <hr>
